--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,5 @@
               ECR_REPOSITORY: products-service
               IMAGE_TAG: ${{ github.sha }} 
             run: |
-              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-              docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+              docker build -t $ECR_REGISTRY/$ECR_REPOSITORY .
+              docker push $ECR_REGISTRY/$ECR_REPOSITORY
